--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
     </div>
     <div class="advantagers">
         <div class="container">
-            <div class="advantagers__header">
+            <h2 class="title">
                 НАШИ ПРЕИМУЩЕСТВА
-            </div>
+            </h2>
             <div class="advantagers__wrapper">
                 <div class="advantagers__block">
                     <img src="icons/cup.png" alt="cup">
@@ -92,10 +92,21 @@
     </div>
     <div class="consultation">
         <div class="container">
-            <h2 class="title">
+            <h2 class="title title_left">
                 Просто заполните форму заявки <br>
                 и мы перезвоним вам в течение 10 минут
             </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваше телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+
+                <button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </div>
     
