--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <!-- <link rel="stylesheet" href="css/slick.css"> -->
+    <link rel="stylesheet" href="css/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>RunSmart</title>
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <div class="header">
                 <a href="#" class="header__logo">
@@ -53,8 +55,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="advantagers">
+    </section>
+    <section class="advantagers">
         <div class="container">
             <h2 class="title">
                 НАШИ ПРЕИМУЩЕСТВА
@@ -89,12 +91,12 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="consultation">
+    </section>
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
-                Просто заполните форму заявки <br>
-                и мы перезвоним вам в течение 10 минут
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра 
             </h2>
             <div class="consultation__descr">
                 Просто заполните форму заявки <br>
@@ -108,7 +110,26 @@
                 <button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
-    </div>
+    </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__wrapper">
+                <div class="carousel__inner">
+                    <div><img src="img/m400.png" alt="m400"></div>
+                    <div><img src="img/m600.png" alt="m600"></div>
+                    <div><img src="img/polar.png" alt="polar"></div>
+                </div>
+                <button type="button" class="prev"><img src="icons/arrow_left.png"></img></button>
+                <button type="button" class="next"><img src="icons/arrow_right.png"></img></button>
+            </div>
+            
+        </div>
+    </section>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
