--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
     </section>
     <section class="catalog">
         <div class="container">
-            <div class="h2 title">Каталог пульсометров</div>
+            <div class="title">Каталог пульсометров</div>
             <ul class="catalog__tabs">
                 <li class="catalog__tab catalog__tab_active">
                     <div>Для фитнеса</div>
@@ -454,6 +454,86 @@
             </div>
         </div>
     </section>
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__wrapper">
+                <div class="reviews__item">
+                    <div class="reviews__img">
+                        <img src="img/irina.png" alt="irina">
+                    </div>
+                    <div class="reviews__descr">
+                        <div class="reviews__name">Ирина Иванченко</div>
+                        <div class="reviews__score">2 полумарафона</div>
+                        <div class="reviews__text">Не знала, что себе купить - обратилась к ребятам из RunSmart -
+                            подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.
+                            Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                            <br><br>
+                            Новые цели - новый гаджет!
+                            <br><br>
+                            Спасибо, RunSmart!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="reviews__item">
+                    <div class="reviews__img">
+                        <img src="img/ivan.png" alt="ivan">
+                    </div>
+                    <div class="reviews__descr">
+                        <div class="reviews__name">Иван Сёмочкин</div>
+                        <div class="reviews__score">1 полумарафон</div>
+                        <div class="reviews__text">Крутая штука-пульсометр. Обычно без них бегал.
+                            Оказывается только хуже себе делал.
+                            Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую
+                            тренировку,
+                            научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план
+                            тренировок на месяц
+                            вперёд.
+                            <br><br>
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="reviews__item">
+                    <div class="reviews__img">
+                        <img src="img/julia.png" alt="julia">
+                    </div>
+                    <div class="reviews__descr">
+                        <div class="reviews__name">Юлия Дашкина</div>
+                        <div class="reviews__score">2 полумарафона</div>
+                        <div class="reviews__text">Долго не могла начать бегать, т.к. до этого несколько раз начинала,
+                            но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса
+                            и решила
+                            попробовать.
+                            <br><br>
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со
+                            скидкой!
+                            Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких
+                            забегов и не
+                            намерена останавливаться!
+                            <br><br>
+                            Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__info">
+            <address class="footer__adress">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af37cd2293290edbac5098024673b99fc4c731b64371a7bc8bd8ec50a9ec14b68&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+    </footer>
     <script src="js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="js/script.js"></script>
